# simple_walking_sim

./: .gitignore  CMakeLists.txt  bootstrap.py  readme.md
assets/: barrel.glb  barrel.gltf  barrel.mtl  basic_scene.glb  floor.glb  sphere.glb  vehicles.glb
assets/shaders/: basic.frag  basic.vert  basic_light.frag  mesh.vert  phong.frag
blender/: barrel.blend  barrel.blend1  basic_scene.blend  basic_scene.blend1  floor.blend  floor.blend1  sphere.blend  sphere.blend1  vehicles.blend  vehicles.blend1
docs/: light.md
src/: asset_import.cpp  asset_import.h  assets.h  assimp_util.h  camera.cpp  camera.h  gl_shader.cpp  gl_shader.h  input.h  main.cpp  material.h  renderer.cpp  renderer.h  utils.cpp  utils.h
